fix(Admin): minor fix for css in mapcontext modal text-overflow (CSTL-1414).

--- a/modules/cstl-admin/grunt/src/less/main.less
+++ b/modules/cstl-admin/grunt/src/less/main.less
@@ -2511,7 +2511,8 @@ body.modal-open{
 }
 
 .top.edit-mapcontext-modale{
-  width: 200px;
+  width: 250px;
+  padding-right: 0 !important;
   overflow: hidden;
   text-overflow: ellipsis;
 }
